--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>my name is akash</h1>
     <h2>i am basically belong to basti</h2>
+    <h3> but i am currently living in lucknow</h3>
 </body>
 </html>
